{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 21,
  "lineage": "4cfaaca9-7202-df51-0209-9de4e63e20c5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:listener/app/harshad/9028b0e1c86d5cd4/961262f6fb98ec45",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:targetgroup/mytargetset/6b3a250f186e4db4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:listener/app/harshad/9028b0e1c86d5cd4/961262f6fb98ec45",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:loadbalancer/app/harshad/9028b0e1c86d5cd4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.my-group",
            "module.vpc.aws_security_group.ssh-allowed",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:internet-gateway/igw-0c407ba55921a7eca",
            "id": "igw-0c407ba55921a7eca",
            "owner_id": "140839674073",
            "vpc_id": "vpc-0a6532f2c8999985a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:loadbalancer/app/harshad/9028b0e1c86d5cd4",
            "arn_suffix": "app/harshad/9028b0e1c86d5cd4",
            "dns_name": "harshad-697569117.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:loadbalancer/app/harshad/9028b0e1c86d5cd4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "harshad",
            "security_groups": [
              "sg-069861f9fc96f89a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0881fa48326f41de5"
              },
              {
                "subnet_id": "subnet-0c96cd0a88028ea94"
              }
            ],
            "subnets": [
              "subnet-0881fa48326f41de5",
              "subnet-0c96cd0a88028ea94"
            ],
            "tags": {
              "Name": "terraform-example-alb"
            },
            "vpc_id": "vpc-0a6532f2c8999985a",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.vpc.aws_security_group.ssh-allowed",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:targetgroup/mytargetset/6b3a250f186e4db4",
            "arn_suffix": "targetgroup/mytargetset/6b3a250f186e4db4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:140839674073:targetgroup/mytargetset/6b3a250f186e4db4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mytargetset",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6532f2c8999985a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c407ba55921a7eca",
            "id": "r-rtb-042b80504ac9429c01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-042b80504ac9429c0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:route-table/rtb-042b80504ac9429c0",
            "id": "rtb-042b80504ac9429c0",
            "owner_id": "140839674073",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0a6532f2c8999985a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072696ea572d70ae1",
            "route_table_id": "rtb-042b80504ac9429c0",
            "subnet_id": "subnet-0881fa48326f41de5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080f277788a44bafb",
            "route_table_id": "rtb-042b80504ac9429c0",
            "subnet_id": "subnet-0c96cd0a88028ea94"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:security-group/sg-069861f9fc96f89a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069861f9fc96f89a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210709193115543800000001",
            "name_prefix": "terraform-",
            "owner_id": "140839674073",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a6532f2c8999985a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:subnet/subnet-0881fa48326f41de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/24",
            "id": "subnet-0881fa48326f41de5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140839674073",
            "vpc_id": "vpc-0a6532f2c8999985a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:subnet/subnet-0c96cd0a88028ea94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-0c96cd0a88028ea94",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140839674073",
            "vpc_id": "vpc-0a6532f2c8999985a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ram",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:vpc/vpc-0a6532f2c8999985a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0b4ddc848dd9b90e4",
            "default_route_table_id": "rtb-04dbb0c0b982d135d",
            "default_security_group_id": "sg-06847b445bc517ad6",
            "dhcp_options_id": "dopt-c9e82da2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a6532f2c8999985a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04dbb0c0b982d135d",
            "owner_id": "140839674073"
          }
        }
      ]
    }
  ]
}